src/objects/ANG_Agency_Risk_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>ANG_Accreditation_Model__c</fullName>
        <label>Accreditation Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Accreditation_Models</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Adjusted__c</fullName>
        <label>Adjusted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Calculation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select an Agency Risk Calculation with Rules record type.</errorMessage>
            <filterItems>
                <field>ANG_Agency_Risk_Calculation__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Rules</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ANG_Agency_Risk_Calculation__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>ANG_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ANG_Financial_Review_Result__c</fullName>
        <label>Financial Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Financial_Review_Result</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Limit_Cash_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the risk event with this calculations flags the cash condition in the account</description>
        <label>Limit Cash Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Max_Range__c</fullName>
        <description>Maximum number of remittances</description>
        <label>Max Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Min_Range__c</fullName>
        <description>Minimum number of remittances</description>
        <label>Min Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Occurrence_Num__c</fullName>
        <label>Number of occurrence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Order__c</fullName>
        <description>Rules processing order</description>
        <label>Order</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Parent_Occurences__c</fullName>
        <label>Parent Occurences</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_Points__c</fullName>
        <label>Points</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANG_RF_Sum_Type__c</fullName>
        <description>Remittance frequency sum type used for risk assessment for multicountry</description>
        <label>RF Sum Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEILING[Σ(RF)*0.0075]</fullName>
                </value>
                <value>
                    <fullName>Σ(RF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Remittance_Frequency__c</fullName>
        <label>Remittance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Remittance_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Risk_History_Assessment__c</fullName>
        <label>Risk History Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_HE_RiskHistoryAssessment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Risk_History__c</fullName>
        <label>Risk History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Risk_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Agency Risk Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ANG_Accreditation_Model__c</columns>
        <columns>ANG_Adjusted__c</columns>
        <columns>ANG_Financial_Review_Result__c</columns>
        <columns>ANG_Limit_Cash_Condition__c</columns>
        <columns>ANG_Occurrence_Num__c</columns>
        <columns>ANG_Order__c</columns>
        <columns>ANG_Remittance_Frequency__c</columns>
        <columns>ANG_Risk_History__c</columns>
        <columns>ANG_Risk_History_Assessment__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Risk_Assessment</fullName>
        <columns>NAME</columns>
        <columns>ANG_Financial_Review_Result__c</columns>
        <columns>ANG_Risk_History_Assessment__c</columns>
        <columns>ANG_Risk_History__c</columns>
        <columns>ANG_Limit_Cash_Condition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ANG_Agency_Risk_Calculation__c.Risk_Status_Assessment</value>
        </filters>
        <label>Risk Assessment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rules</fullName>
        <columns>NAME</columns>
        <columns>ANG_Accreditation_Model__c</columns>
        <columns>ANG_Occurrence_Num__c</columns>
        <columns>ANG_Adjusted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ANG_Agency_Risk_Calculation__c.Rules</value>
        </filters>
        <label>Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARC-{00000000}</displayFormat>
        <label>Agency Risk Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Risk Calculations</pluralLabel>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remittance_Frequency_Values</fullName>
        <active>true</active>
        <description>Record type to track the value that each type of remittance frequency has for multicountry</description>
        <label>Remittance Frequency Values</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Status_Assessment</fullName>
        <active>true</active>
        <label>Risk Status Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rules</fullName>
        <active>true</active>
        <label>Rules</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ANG_Occurrence_Num_cant_be_negative</fullName>
        <active>true</active>
        <description>ANG_Occurrence_Num__c can&apos;t be negative</description>
        <errorConditionFormula>ANG_Occurrence_Num__c&lt;0</errorConditionFormula>
        <errorDisplayField>ANG_Occurrence_Num__c</errorDisplayField>
        <errorMessage>Number of occurrence has to be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANG_RF_Sum_Type_Only_for_Multicountry</fullName>
        <active>true</active>
        <description>Remittance Frequency Sum Type field can only be updated when the accreditation model is set as Multicountry</description>
        <errorConditionFormula>AND(
 NOT(ISPICKVAL(ANG_RF_Sum_Type__c, &apos;&apos;)),
 NOT(ISPICKVAL(ANG_Accreditation_Model__c, &apos;Multicountry&apos;))
)</errorConditionFormula>
        <errorMessage>RF Sum Type must only be filled when the accreditation model is &apos;Multicountry&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANG_Ranges_Only_for_Mixed_Multicountry</fullName>
        <active>true</active>
        <description>Minimum and maximum ranges can only be filled when Adjusted = &apos;Mixed&apos; and parent rule accreditation model is &apos;Multicountry&apos;</description>
        <errorConditionFormula>AND(
 NOT(ISPICKVAL(ANG_Adjusted__c, &apos;Mixed&apos;)),
 NOT(ISPICKVAL(ANG_Calculation_Rule__r.ANG_Accreditation_Model__c, &apos;Multicountry&apos;)),
 OR(NOT(ISBLANK(ANG_Min_Range__c)), 
    NOT(ISBLANK(ANG_Max_Range__c)))
)</errorConditionFormula>
        <errorMessage>Min and Max Range can only be filled when Adjusted = &apos;Mixed&apos; and Accreditation Model = &apos;Multicountry&apos;</errorMessage>
    </validationRules>
</CustomObject>